# plinycompute

./: .gitignore  CMakeLists.txt  gmon.out  out.sqlite
applications/: Applications.cmake
applications/TestGMM/: CMakeLists.txt  TestGmmLazy.cc  TestGmmLoadData.cc
applications/TestGMM/sharedLibraries/headers/: GmmAggregateLazyWriteSet.h  GmmDoubleVectorScanSet.h  GmmDoubleVectorWriteSet.h  GmmSampleSelection.h  GmmSampler.h
applications/TestGMM/sharedLibraries/source/: GmmAggregateLazyWriteSet.cc  GmmDoubleVectorScanSet.cc  GmmDoubleVectorWriteSet.cc
applications/TestLDA/: TestLDA.cc
applications/TestLDA/sharedLibraries/headers/: LDADocWordTopicAssignmentIdentity.h  LDADocWordTopicJoin.h  LDADocument.h  LDAInitialTopicProbSelection.h  LDAInitialWordTopicProbSelection.h  LDATopicAssignmentMultiSelection.h  LDATopicWordProb.h  ScanIntDoubleVectorPairSet.h  ScanIntSet.h  ScanLDADocumentSet.h  ScanTopicsPerWord.h  WriteIntDoubleVectorPairSet.h  WriteLDADocWordTopicAssignment.h  WriteLDADocWordTopicAssignmentSet.h  WriteTopicsPerWord.h
applications/TestLinearAlgebra/: CMakeLists.txt
applications/TestLinearAlgebra/linearAlgebraDSL/headers/: LAAdditiveExpressionNode.h  LAExpressionNode.h  LALexerTokens.h  LAMultiplicativeExpressionNode.h  LAPDBInstance.h  LAPrimaryExpressionNode.h
applications/TestLinearAlgebra/linearAlgebraDSL/source/: LAEvaluateFunctions.cc  LALexer.l  LAParser.y
applications/TestLinearAlgebra/sharedLibraries/headers/: LADuplicateRowMultiSelection.h  LAElementwiseMultiplyJoin.h  LAInverse2Selection.h  LAMinElementAggregate.h  LAScanMatrixBlockSet.h  LASubtractJoin.h  LATransposeMultiply1Join.h  LATransposeSelection.h  LAWriteMatrixBlockSet.h  LAWriteMaxElementSet.h  LAWriteMinElementSet.h  MatrixBlock.h
applications/TestLinearAlgebra/sharedLibraries/source/: LAElementwiseMultiplyJoin.cc  LASubtractJoin.cc
applications/TestLinearAlgebra/tests/: TestLA_Instance.cc  TestLA_unit01_Transpose.cc  TestLA_unit02_Add.cc  TestLA_unit03_Subtract.cc  TestLA_unit04_Multiply.cc  TestLA_unit05_MaxElement.cc  TestLA_unit06_MinElement.cc  TestLA_unit07_ElementwiseMultiply.cc  TestLA_unit08_RowMax.cc  TestLA_unit09_RowMin.cc  TestLA_unit10_ColMax.cc  TestLA_unit11_ColMin.cc  TestLA_unit12_DuplicateRow.cc  TestLA_unit13_DuplicateCol.cc  TestLA_unit14_Inverse.cc  TestLA_unit15_RowSum.cc  TestLA_unit16_ColSum.cc  TestLA_unit17_TransposeMultiply.cc  TestLA_unit18_TransposeMultiply_Gram.cc
applications/TestMatrixMultiply/: CMakeLists.txt  TestMatrixMultiply.cc
applications/TestMatrixMultiply/sharedLibraries/headers/: MatrixBlock.h  MatrixBlockData.h  MatrixBlockMeta.h  MatrixMultiplyAggregation.h  MatrixMultiplyJoin.h  MatrixScanner.h  MatrixWriter.h
applications/TestMatrixMultiply/sharedLibraries/source/: MatrixBlock.cc  MatrixBlockData.cc  MatrixBlockMeta.cc  MatrixMultiplyAggregation.cc  MatrixMultiplyJoin.cc  MatrixScanner.cc  MatrixWriter.cc
aws/: README.md  mountAndBuild.sh  setupAMI.sh  startManager.sh  startWorker.sh
aws/TestLDA/: README.md  run.sh
benchmarks/: BenchObjectModel1.cc  BenchObjectModel2.cc  BenchObjectModel3.cc  BenchObjectModel4.cc  BenchObjectModel5.cc  Benchmarks.cmake
pdb/src/bufferManager/headers/: PDBBufferManagerBackEnd.h  PDBBufferManagerBackEndTemplate.cc  PDBBufferManagerCheckLRU.h  PDBBufferManagerDebugBackEnd.h  PDBBufferManagerDebugFrontend.h  PDBBufferManagerFileWriter.h  PDBBufferManagerFrontEnd.h  PDBBufferManagerFrontEndTemplate.cc  PDBBufferManagerImpl.h  PDBBufferManagerInterface.h  PDBPage.h  PDBPageCompare.h  PDBPageHandle.h  PDBSet.h  PDBSetCompare.h  PDBSharedMemory.h
pdb/src/bufferManager/source/: PDBBufferManagerDebugBackEnd.cc  PDBBufferManagerDebugFrontend.cc  PDBBufferManagerFileWriter.cc  PDBBufferManagerFrontEnd.cc  PDBBufferManagerImpl.cc  PDBPage.cc
pdb/src/builtInPDBObjects/headers/: AggregationMap.h  Array.cc  Array.h  BufForwardPageRequest.h  BufFreezeRequestResult.h  BufFreezeSizeRequest.h  BufGetAnonymousPageRequest.h  BufGetPageForObjectRequest.h  (+64 more)
scripts/: installDependencies.sh
scripts/internal/: cleanupNode.sh  generateTypeCodes.py  setupDependencies.py
tests/: Tests.cmake
tests/integration/TestAddData/: CMakeLists.txt  TestAddData.cc
tests/integration/TestAggregation/: CMakeLists.txt  TestAggregation.cc
tests/integration/TestAggregationAfterThreeWayJoin/: CMakeLists.txt  TestAggregationAfterThreeWayJoin.cc
tests/integration/TestCartasianJoin/: CMakeLists.txt  TestCartasianJoin.cc
tests/integration/TestClearSet/: CMakeLists.txt  TestClearSet.cc
tests/integration/TestComplexUnion/: CMakeLists.txt  TestComplexUnion.cc
tests/integration/TestDoubleUnion/: CMakeLists.txt  TestDoubleUnion.cc
tests/integration/TestJoin/: CMakeLists.txt  TestJoin.cc
tests/integration/TestMultiSelection/: CMakeLists.txt  TestMultiSelection.cc
tests/integration/TestSelection/: CMakeLists.txt  TestSelection.cc
tests/integration/TestTwoSinks/: CMakeLists.txt  TestTwoSinks.cc
tests/integration/TestUnion/: CMakeLists.txt  TestUnion.cc
tests/unit/: CMakeLists.txt  TestBufferManager.cc  TestBufferManagerBackend.h  TestBufferManagerBackendMultiThreaded1.cc  TestBufferManagerBackendMultiThreaded2.cc  TestBufferManagerBackendMultiThreaded3.cc  TestBufferManagerBackendSingleThreaded.cc  TestBufferManagerDebugFrontend.cc  TestBufferManagerFrontendMultiThreaded1.cc  TestBufferManagerFrontendMultiThreaded2.cc  TestBufferManagerFrontendMultiThreaded3.cc  TestBufferManagerFrontendMultiThreaded4.cc  TestBufferManagerFrontendSingleThreaded.cc  TestCatalog.cc  TestConcurentQueue.cc  TestFeedingPageSet.cc  TestGPUObjectAllocation.cc  TestJoinMapWithJoinTuple.cc  TestNewJoin.cc  TestPhysicalOptimizer.cc  TestPipeBuilder.cc  TestPipelineWithAggregation.cc  TestPipelineWithBroadcastJoin1.cc  TestPipelineWithMultipleBroadcastJoin1.cc  TestPipelineWithMultipleShuffleJoin1.cc  TestPipelineWithMultiselection.cc  TestPipelineWithSelection.cc  TestPipelineWithShuffleJoin1.cc  TestPipelineWithShuffleJoin2.cc  TestSetScanner.cc  TestString..cc  TestTCAPGeneration.cc  TestVector.cc
tools/cmake/: FindMKL.cmake
(+327 files in other folders)
